--- a/test/test_config.ini
+++ b/test/test_config.ini
@@ -11,3 +11,15 @@ log_file = /var/log/
 ; Indicates the path to store the SQLite file to store expense data.
 ; Default value = data/SQLite/photophixer.db
 sqlite_path = data/SQLite/photophixer.db
+
+; Indicates which database engine will be used in Pony ORM
+; Default value = sqlite
+db_engine = sqlite
+
+; Indicates the path to be used as temporary storage to evaluate remote files
+; Default value = /tmp/
+temp_path = /tmp/
+
+; Indicates the remote dropbox directory where device photos are stored
+; Default value = /Camera Uploads
+dropbox_photo_path = /Camera Uploads/
