--- a/.gitignore
+++ b/.gitignore
@@ -336,3 +336,10 @@ fabric.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,python,dropbox,flask
 /config.ini
+/.idea/aws.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/PhotoPhixer.iml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
