Refactors test, config file and classes

--- a/test/test_config.ini
+++ b/test/test_config.ini
@@ -2,9 +2,6 @@
 ; Indicates if you want a verbose log or not. Default = False
 debug = False
 
-; Private dropbox key to connect to your account
-dropbox_key = 'some_randon_key_here'
-
 ; Indicates the Log Directory. Default = /var/log/
 log_file = /var/log/
 
@@ -20,6 +17,17 @@ db_engine = sqlite
 ; Default value = /tmp/
 temp_path = /tmp/
 
+
+[DROPBOX]
+; Private dropbox key to connect to your account
+access_key = some_key_here
+
 ; Indicates the remote dropbox directory where device photos are stored
 ; Default value = /Camera Uploads
-dropbox_photo_path = /Camera Uploads/
+photo_path = /Camera Uploads/
+
+; Indicates how the photos will be organized, this case, all photos that
+; contains device01 as device will be placed at mobile_foo/ inside photo_path
+; i.e. /TestDir/mobile_foo/.
+device_dir_01   = 'mobile_foo'
+device_match_01 = 'device01'
